// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is default filterTags 1`] = `
<div
  className="filter-tags"
>
  <div
    className="filter-tag"
  >
    <input
      checked={true}
      id="first"
      name="filter"
      onChange={[Function]}
      type="radio"
      value="first"
    />
    <label
      htmlFor="first"
    >
      First Tag
    </label>
  </div>
  <div
    className="filter-tag"
  >
    <input
      checked={false}
      id="second"
      name="filter"
      onChange={[Function]}
      type="radio"
      value="second"
    />
    <label
      htmlFor="second"
    >
      Second Tag
    </label>
  </div>
</div>
`;

exports[`renders correctly when there is filterTags with custom class 1`] = `
<div
  className="filter-tags p-4 border"
>
  <div
    className="filter-tag"
  >
    <input
      checked={true}
      id="first"
      name="filter"
      onChange={[Function]}
      type="radio"
      value="first"
    />
    <label
      htmlFor="first"
    >
      First Tag
    </label>
  </div>
  <div
    className="filter-tag"
  >
    <input
      checked={false}
      id="second"
      name="filter"
      onChange={[Function]}
      type="radio"
      value="second"
    />
    <label
      htmlFor="second"
    >
      Second Tag
    </label>
  </div>
</div>
`;

exports[`renders correctly when there is filterTags with custom name 1`] = `
<div
  className="filter-tags"
  style={
    Object {
      "padding": "4px",
    }
  }
>
  <div
    className="filter-tag"
  >
    <input
      checked={true}
      id="first"
      name="symbol filter"
      onChange={[Function]}
      type="radio"
      value="first"
    />
    <label
      htmlFor="first"
    >
      First Tag
    </label>
  </div>
  <div
    className="filter-tag"
  >
    <input
      checked={false}
      id="second"
      name="symbol filter"
      onChange={[Function]}
      type="radio"
      value="second"
    />
    <label
      htmlFor="second"
    >
      Second Tag
    </label>
  </div>
</div>
`;

exports[`renders correctly when there is filterTags with custom style 1`] = `
<div
  className="filter-tags"
  style={
    Object {
      "padding": "4px",
    }
  }
>
  <div
    className="filter-tag"
  >
    <input
      checked={true}
      id="first"
      name="filter"
      onChange={[Function]}
      type="radio"
      value="first"
    />
    <label
      htmlFor="first"
    >
      First Tag
    </label>
  </div>
  <div
    className="filter-tag"
  >
    <input
      checked={false}
      id="second"
      name="filter"
      onChange={[Function]}
      type="radio"
      value="second"
    />
    <label
      htmlFor="second"
    >
      Second Tag
    </label>
  </div>
</div>
`;
